[package]
name = "pbjson-test"
version = "0.6.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2021"
description = "Test resources for pbjson converion"
repository = "https://github.com/influxdata/pbjson"

[dependencies]
prost = { version = "0.12", default-features = false, features = ["prost-derive"] }
pbjson = { path = "../pbjson" , default-features = false}
pbjson-types = { path = "../pbjson-types" , default-features = false}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[features]
default = ["std"]
std = ["prost/std", "serde/std", "pbjson/std", "pbjson-types/std"]
ignore-unknown-fields = []
btree = []
emit-fields = []
use-integers-for-enums = []
preserve-proto-field-names = []

[dev-dependencies]
chrono = "0.4"
serde_json = "1.0"

[build-dependencies]
prost-build = "0.12"
pbjson-build = { path = "../pbjson-build" }
